feat(scanner): 两阶段扫描器 + transformers/llamacpp 进程内后端 + SARIF/semgrep
- 新增 two_stage_scanner（规则预筛+LLM 两阶段）、sarif_report、semgrep 规则集
- 新增 transformers_client（NF4 基座+FP16 LoRA）与 llamacpp_client 后端
- scanner 默认后端改为自动解析：显式 env > 配置 ADAPTER 用 transformers > 回退 ollama
- bootstrap 启动器感知后端：transformers/llamacpp 模式跳过 Ollama 并校验依赖/adapter
- requirements.txt 标注进程内后端的可选依赖与安装命令
- 修复 freeze_testset/flywheel_ingest 在 GBK 控制台的 UnicodeEncodeError
- FixVerifier 扩充危险模式；更新 releases 插件产物
- .gitignore 排除 .workbuddy/